--- a/app/src/main/res/layout/fragment_corporate.xml
+++ b/app/src/main/res/layout/fragment_corporate.xml
@@ -33,6 +33,7 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/bhd_500"
 
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -65,7 +66,7 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/medical_sponser"
+            android:id="@+id/bhd_1000"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
@@ -84,11 +85,11 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/general_sponsor"
+            android:id="@+id/bhd_2000"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
-            app:layout_constraintStart_toEndOf="@+id/medical_sponser"
+            app:layout_constraintStart_toEndOf="@+id/bhd_1000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -113,6 +114,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
 
+                android:id="@+id/additional_option"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
