--- a/app/src/main/res/layout/fragment_medical.xml
+++ b/app/src/main/res/layout/fragment_medical.xml
@@ -98,6 +98,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     >
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/email"
@@ -119,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="10"
+                    android:layout_marginTop="10dp"
                     >
 
                     <com.hbb20.CountryCodePicker
@@ -153,6 +155,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     >
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/address"
@@ -263,11 +266,131 @@
                             ></androidx.appcompat.widget.AppCompatImageView>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="20dp"
+                    app:cardCornerRadius="14dp"
+                    android:elevation="14dp"
+                    android:layout_margin="5dp"
+                    >
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        >
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/medical"
+                            android:textSize="@dimen/heading_text_25sp"
+                            android:textColor="@color/pink_theam"
+                            android:fontFamily="@font/avenir_heavy"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="20dp"
+                            ></androidx.appcompat.widget.AppCompatTextView>
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="50"
+                            android:textSize="@dimen/heading_text_36sp"
+                            android:textColor="@color/pink_theam"
+                            android:fontFamily="@font/avenir_heavy"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="10dp"
+                            ></androidx.appcompat.widget.AppCompatTextView>
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bhd"
+                            android:textSize="@dimen/heading_text_36sp"
+                            android:textColor="@color/pink_theam"
+                            android:fontFamily="@font/avenir_heavy"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="10dp"
+                            ></androidx.appcompat.widget.AppCompatTextView>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                </androidx.cardview.widget.CardView>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="25dp"
+
+                    >
+
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:orientation="horizontal"
+                        >
+
+                        <RadioButton
+                            android:id="@+id/radio1"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:textColor="@color/pink_theam"
+                            android:buttonTint="@color/pink_theam"
+                            android:text="@string/debit" />
+
+                        <RadioButton
+                            android:id="@+id/radio2"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/pink_theam"
+                            android:buttonTint="@color/pink_theam"
+                            android:text="@string/credit" />
+
+                    </RadioGroup>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.core.widget.NestedScrollView>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+
+            app:layout_constraintHeight_percent="0.075"
+            app:layout_constraintWidth_percent="0.65"
+            app:layout_constraintVertical_bias="0.95"
+            android:background="@drawable/custom_button_pick"
+            android:text="@string/pay_now"
+            android:textColor="@color/white"
+            android:fontFamily="@font/avenir_heavy"
+
+
+            ></androidx.appcompat.widget.AppCompatButton>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
