--- a/app/src/main/res/layout/case_list_view_holder.xml
+++ b/app/src/main/res/layout/case_list_view_holder.xml
@@ -6,6 +6,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/case_report_item_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
 
