--- a/app/src/main/res/layout/run_wizard_view_holder.xml
+++ b/app/src/main/res/layout/run_wizard_view_holder.xml
@@ -2,11 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/pink_theam"
     android:layout_height="match_parent">
-
-
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -17,15 +13,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.9"
-
         app:cardCornerRadius="14dp"
         app:cardElevation="4dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            >
+            android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatTextView
 
