--- a/app/src/main/res/layout/activity_pick_image.xml
+++ b/app/src/main/res/layout/activity_pick_image.xml
@@ -10,6 +10,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="236dp"
         android:layout_height="268dp"
+        android:id="@+id/image"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,13 +23,28 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
 
-        android:onClick="button"
+        android:id="@+id/open_event_button"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.849"></androidx.appcompat.widget.AppCompatButton>
+        app:layout_constraintVertical_bias="0.849"
+        tools:ignore="UsingOnClickInXml"></androidx.appcompat.widget.AppCompatButton>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/open_event_button2"
+        android:layout_width="120dp"
+
+        android:layout_height="40dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.953"
+        tools:ignore="UsingOnClickInXml"></androidx.appcompat.widget.AppCompatButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
