--- a/app/src/main/res/layout/fragment_vol__home.xml
+++ b/app/src/main/res/layout/fragment_vol__home.xml
@@ -60,6 +60,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/vol_home_resources"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
