--- a/app/src/main/res/layout/terms2backup.xml
+++ b/app/src/main/res/layout/terms2backup.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:fontFamily="@font/avenir_heavy"
-                android:text="@string/service"
+                android:text="@string/backup_support"
 
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -64,7 +64,6 @@
                 android:id="@+id/webViewContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
 
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
@@ -94,15 +93,82 @@
             </androidx.cardview.widget.CardView>
 
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/appCompatTextView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_marginTop="16dp"
+                android:text="@string/supporet_for"
+                app:layout_constraintStart_toStartOf="@+id/webViewContainer"
+                app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner"></androidx.appcompat.widget.AppCompatTextView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/appCompatSpinner2"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                app:cardElevation="4dp"
+                app:cardCornerRadius="6dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
+                app:layout_constraintWidth_percent="0.65"></androidx.cardview.widget.CardView>
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/message_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/message"
+
+
+                android:layout_marginTop="16dp"
+
+
+                app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
+                app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner2"></androidx.appcompat.widget.AppCompatTextView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/appCompatEditText"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginTop="16dp"
 
-                app:layout_constraintWidth_percent="0.9"
+                android:background="@drawable/custom_edit_text"
+                android:hint="sdflkjsak"
+                android:gravity="start"
+                android:padding="5dp"
 
-                ></androidx.constraintlayout.widget.ConstraintLayout>
+                app:cardElevation="4dp"
+                app:cardCornerRadius="6dp"
+                android:maxLines="5"
+                android:text="dsakjfj"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.15"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/message_text"
+                app:layout_constraintWidth_percent="0.65"></androidx.cardview.widget.CardView>
 
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/send_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintWidth_percent="0.3"
+                android:background="@drawable/custom_button"
+                android:textColor="@color/white"
+                android:text="@string/send"
+                android:textSize="@dimen/heading_text_16sp"
+                android:fontFamily="@font/avenir_heavy"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"></androidx.appcompat.widget.AppCompatButton>
 
             <View
                 android:layout_width="15dp"
