--- a/app/src/main/res/drawable/custom_card_bg.xml
+++ b/app/src/main/res/drawable/custom_card_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="14dp"></corners>
-    <solid android:color="@color/pink_theam"></solid>
+    <solid android:color="@color/yellow_theam"></solid>
 </shape>
