--- a/app/src/main/res/layout/run_wizard_view_holder_shift_log.xml
+++ b/app/src/main/res/layout/run_wizard_view_holder_shift_log.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -21,12 +21,48 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                android:background="@drawable/custom_shit_button"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+
+                app:layout_constraintHeight_percent="0.2"
+                app:layout_constraintHorizontal_bias="0.938"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.053"
+                app:layout_constraintWidth_percent="0.3">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/custim_shift_text_view"
+                    android:padding="5dp"
+                    android:text="@string/my_shift"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/avenir_heavy"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHeight_percent="0.78"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.945"></androidx.appcompat.widget.AppCompatTextView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintVertical_bias="0.2"
+                app:layout_constraintVertical_bias="0.3"
                 app:layout_constraintHorizontal_bias="0.1"
                 android:text="15 March 2023"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -54,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintVertical_bias="0.2"
+                app:layout_constraintVertical_bias="0.3"
                 app:layout_constraintHorizontal_bias="0.9"
                 android:text="Language"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -85,6 +121,7 @@
                 android:id="@+id/vol_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
 
                 android:text="English"
 
