--- a/app/src/main/res/layout/fragment_vol_calendar.xml
+++ b/app/src/main/res/layout/fragment_vol_calendar.xml
@@ -64,6 +64,58 @@
             app:layout_constraintVertical_bias="00.05"
             app:layout_constraintWidth_percent="0.85">
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/list_open_my_shift_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                >
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/appCompatTextView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/avenir_heavy"
+                    android:text="@string/open_shift_slashn"
+
+                    android:textSize="@dimen/heading_text_14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/switchCompat_open_my_shift"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>
+
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switchCompat_open_my_shift"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+
+                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView10"
+                    android:padding="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.SwitchCompat>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/appCompatTextView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/avenir_heavy"
+                    android:text="@string/my_shift_slashn"
+
+                    android:textSize="@dimen/heading_text_14sp"
+                    app:layout_constraintStart_toEndOf="@+id/switchCompat_open_my_shift"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/appCompatTextView7"
                 android:layout_width="wrap_content"
@@ -71,7 +123,7 @@
                 android:fontFamily="@font/avenir_heavy"
                 android:text="@string/calendar_mode"
 
-                android:textSize="@dimen/heading_text_18sp"
+                android:textSize="@dimen/heading_text_14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/switchCompat"
                 app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>
@@ -94,7 +146,7 @@
                 android:fontFamily="@font/avenir_heavy"
                 android:text="@string/list_mode"
 
-                android:textSize="@dimen/heading_text_18sp"
+                android:textSize="@dimen/heading_text_14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>
@@ -102,6 +154,8 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/calendar_view"
+            android:visibility="gone"
             android:layout_width="0dp"
             app:layout_constraintWidth_percent="0.89"
             android:layout_height="0dp"
@@ -126,11 +180,14 @@
 
 
                 <CalendarView
+                    android:id="@+id/calendarView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
 
                     ></CalendarView>
+
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="20dp">
@@ -230,6 +287,130 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
             </ScrollView>
         </androidx.core.widget.NestedScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/list_view"
+
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.89"
+            android:layout_height="0dp"
+
+            app:layout_constraintHeight_percent="0.825"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+
+            >
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+
+                app:layout_constraintHeight_percent="0.2"
+                app:cardElevation="4dp"
+                app:cardCornerRadius="4dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="@string/filters"
+                        app:layout_constraintBottom_toBottomOf="parent"
+
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.1"></androidx.appcompat.widget.AppCompatTextView>
+
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/all_shift"
+                        android:layout_width="wrap_content"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/custom_text_view_shift"
+                        android:text="@string/all_shift"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/day_shift"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+
+
+                        app:layout_constraintVertical_bias="0.75"></androidx.appcompat.widget.AppCompatTextView>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/day_shift"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/day_shift"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/night_shift"
+                        app:layout_constraintStart_toEndOf="@+id/all_shift"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.75"
+
+                        ></androidx.appcompat.widget.AppCompatTextView>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/night_shift"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/night_shift"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+
+                        app:layout_constraintStart_toEndOf="@+id/day_shift"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.75"></androidx.appcompat.widget.AppCompatTextView>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/progressBarStyleHorizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHeight_percent="0.795"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+
+                ></ProgressBar>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_shift_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHeight_percent="0.795"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"></androidx.recyclerview.widget.RecyclerView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
