--- a/app/src/main/res/layout/fragment_case_report.xml
+++ b/app/src/main/res/layout/fragment_case_report.xml
@@ -14,11 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-
-
         app:layout_constraintHeight_percent="0.85"
-        android:background="@drawable/upper_side_custom_background"
-        >
+        android:background="@drawable/upper_side_custom_background">
 
 
 
